# mnist-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
mnist_classifier/: __init__.py  infer.py  logger.py  model.py  train.py  utils.py
