[tool.poetry]
name = "mnist-classifier"
version = "0.1.0"
description = "mnist-classifier is a simple MNIST image classifier using the LeNet-5 neural network."
authors = ["ksuglobov <kusuglobov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
