[tool.poetry]
name = "mnist-classifier"
version = "0.1.0"
description = "mnist-classifier is a simple MNIST image classifier using the LeNet-5 neural network."
authors = ["ksuglobov <kusuglobov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
numpy = "^1.26.0"
pandas = "^2.1.1"
tqdm = "^4.66.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
